[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Sprite/Player/heart.png" type="Texture" id=1]
[ext_resource path="res://HUD/HealthUI.gd" type="Script" id=2]

[node name="HealthUI" type="Node2D"]
script = ExtResource( 2 )

[node name="Heart_0" type="Sprite" parent="."]
position = Vector2( 8, 8 )
texture = ExtResource( 1 )
hframes = 3

[node name="Heart_1" type="Sprite" parent="."]
position = Vector2( 26, 8 )
texture = ExtResource( 1 )
hframes = 3

[node name="Heart_2" type="Sprite" parent="."]
position = Vector2( 44, 8 )
texture = ExtResource( 1 )
hframes = 3
